# graphs

./: Cargo.toml
crates/graphs-algorithms/: Cargo.toml
crates/graphs-algorithms/src/: lib.rs  min_spanning_tree.rs
crates/graphs-bits/: Cargo.toml
crates/graphs-bits/src/: block.rs  capacity.rs  lib.rs  set.rs  vec.rs
crates/graphs-core/: Cargo.toml
crates/graphs-core/src/: algorithm.rs  base.rs  build.rs  by.rs  capacity.rs  clear.rs  connection.rs  connections.rs  control.rs  count.rs  create.rs  cycles.rs  data.rs  degree.rs  direction.rs  edges.rs  empty.rs  exhaust.rs  extend.rs  find.rs  freeze.rs  frozen.rs  id.rs  identifiers.rs  incidence.rs  index.rs  indexed.rs  internal.rs  item.rs  items.rs  keys.rs  kind.rs  kinds.rs  lib.rs  limit.rs  loops.rs  markers.rs  neighbors.rs  next.rs  recoverable.rs  (+13 more)
crates/graphs-core/src/adapters/: adapt.rs  mod.rs  reversed.rs  undirected.rs
crates/graphs-core/src/connections/: key.rs  mod.rs
crates/graphs-map/: Cargo.toml
crates/graphs-map/src/: graph.rs  lib.rs
crates/graphs-simple/: Cargo.toml
crates/graphs-simple/src/: at_most_two.rs  digraph.rs  directed.rs  error.rs  errors.rs  generic.rs  graph.rs  index.rs  internal.rs  lib.rs  next.rs  parts.rs  undirected.rs
crates/graphs-stable/: Cargo.toml
crates/graphs-stable/src/: generic.rs  lib.rs  parts.rs
crates/graphs-traversal/: Cargo.toml
crates/graphs-traversal/src/: bfs.rs  dfs.rs  dfs_post_order.rs  lib.rs  topological.rs  traverse.rs
crates/graphs-union-find/: Cargo.toml
crates/graphs-union-find/src/: lib.rs  rank.rs  vec.rs
src/: lib.rs  main.rs  ~stable.rs
