[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
repository = "https://github.com/nekitdev/graphs-std"
license = "MIT"

[workspace.dependencies.cfg-if]
version = "1.0.0"

[workspace.dependencies.thiserror]
version = "2.0.12"
default-features = false

[workspace.dependencies.indexmap]
version = "2.9.0"
default-features = false

[package]
name = "graphs"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Graph data structures and algorithms."
documentation = "https://docs.rs/graphs-std"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "algorithm", "data-structure"]
categories = ["algorithms", "data-structures"]

[dependencies.cfg-if]
workspace = true

[dependencies.graphs-core]
path = "crates/graphs-core"
version = "0.2.0"
default-features = false

[dependencies.graphs-algorithms]
path = "crates/graphs-algorithms"
version = "0.2.0"
optional = true
default-features = false

[dependencies.graphs-map]
path = "crates/graphs-map"
version = "0.2.0"
optional = true
default-features = false

[dependencies.graphs-simple]
path = "crates/graphs-simple"
version = "0.2.0"
optional = true
default-features = false

[dependencies.graphs-traversal]
path = "crates/graphs-traversal"
version = "0.2.0"
optional = true
default-features = false

[features]
# TODO: add "std" here
default = ["map", "traversal"]
std = [
    "graphs-algorithms?/std",
    "graphs-simple?/std",
    "graphs-map?/std",
    "graphs-traversal?/std",
]
algorithms = ["graphs-algorithms"]
simple = ["graphs-simple"]
map = ["graphs-map"]
traversal = ["graphs-traversal"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
