[package]
name = "graphs-algorithms"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Various graph algorithms."
documentation = "https://docs.rs/graphs-algorithms"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "algorithm"]

[dependencies.cfg-if]
workspace = true

[dependencies.thiserror]
workspace = true

[features]
# TODO: add "std" here
default = []
std = ["thiserror/std"]
alloc = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
