[package]
name = "graphs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Core functionality for graphs."
documentation = "https://docs.rs/graphs-core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "core"]

[dependencies.cfg-if]
workspace = true

[dependencies.thiserror]
workspace = true

[features]
default = ["std"]
std = ["thiserror/std"]
alloc = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default = ["std", "bits"]
