[package]
name = "graphs-core"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Core functionality for graphs."
documentation = "https://docs.rs/graphs-core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "core"]

[dependencies.thiserror]
workspace = true

[features]
# TODO: add "std" here
default = []
std = []
alloc = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
