[package]
name = "graphs-map"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Graph data structure using maps."
documentation = "https://docs.rs/graphs-map"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "map"]

[dependencies.cfg-if]
workspace = true

[dependencies.graphs-core]
path = "../graphs-core"
version = "0.2.0"

[dependencies.thiserror]
workspace = true

[dependencies.indexmap]
workspace = true

[features]
# TODO: add "std" here
default = []
std = ["indexmap/std"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
