[package]
name = "graphs-map"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Graph data structure using maps."
documentation = "https://docs.rs/graphs-map"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "map"]

[dependencies.graphs-core]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.indexmap]
workspace = true

[features]
# TODO: add "std" here
default = []
std = ["indexmap/std"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
