[package]
name = "graphs-traversal"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Graph data structure traversal."
documentation = "https://docs.rs/graphs-traversal"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "traversal"]

[dependencies.cfg-if]
workspace = true

[dependencies.graphs-core]
path = "../graphs-core"
version = "0.2.0"

[features]
# TODO: add "std" here
default = []
std = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
