[package]
name = "graphs-traversal"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Graph data structure traversal."
documentation = "https://docs.rs/graphs-traversal"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["graph", "traversal"]

[dependencies.graphs-core]
workspace = true

[features]
# TODO: add "std" here
default = []
alloc = []
std = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
